force-app/main/default/objects/Gmail_Connection__mdt/Gmail_Connection__mdt.object-meta.xml
<CustomObject>
    <description>Stores Gmail OAuth credentials and configuration for email monitoring integration</description>
    <label>Gmail Connection</label>
    <pluralLabel>Gmail Connections</pluralLabel>
</CustomObject>