force-app/main/default/objects/Gmail_Connection__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <description>Google OAuth 2.0 Client ID from Google Cloud Console</description>
    <label>Client ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>