force-app/main/default/objects/Gmail_Connection__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this Gmail connection is actively monitored</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>