force-app/main/default/objects/Gmail_Connection__mdt/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <description>18-character Salesforce ID of the associated Location__c record</description>
    <label>Location ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>