force-app/main/default/objects/Gmail_Connection__mdt/fields/Mailbox_Email__c.field-meta.xml
<CustomField>
    <fullName>Mailbox_Email__c</fullName>
    <description>The Gmail email address being monitored for booking requests</description>
    <label>Mailbox Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>