force-app/main/default/objects/Gmail_Connection__mdt/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <description>Google OAuth 2.0 Refresh Token for obtaining new access tokens</description>
    <label>Refresh Token</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>